--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 	padding: 0;
 	font-family:"AsTheyDraw_medium";
 }
+
 #container {
 	/* display: flex;
 	justify-content: center;
@@ -24,6 +25,7 @@ body {
 	width:100vw;
 	height: 100vh;
 }
+
 #result-container {
 	width: 100%;
 	height: 80vh;
@@ -53,11 +55,12 @@ body {
 	bottom:1rem;
 	display:flex;
 	font-size:.5em;
-	width:100%;
+	width:80%;
 	display:flex;
 	flex-flow: row wrap;
 	align-items: end;
 	color:#999;
+	/* background:blue; */
 }
 
 .font {
@@ -107,42 +110,54 @@ body {
 	top: 0;
 	bottom: 0;
 	right: 0;
-	display: none;
+	display: flex;
 	flex-direction: column;
-	justify-content: center;
+	justify-content: end;
 	align-items: center;
-	width: 100px;
+	width: 20%;
 	padding: 20px;
-	/* background-color: #f0f0f0; */
+	/* background-color: pink; */
 	z-index: 100;
 }
 
 label {
-	writing-mode: vertical-lr;
 	text-orientation:sideways;
 	margin-bottom: 10px;
 }
 
-input[type=range][orient=vertical] {
-	writing-mode: bt-lr;
-	/* IE */
-	-webkit-appearance: slider-vertical;
-	/* Chromium */
-	
-	width: 8px;
-	height: 175px;
-	padding: 0 5px;
+input[type=range]{
+	-webkit-appearance: none;
+		width: 100%;
+		height: 10px;
+		border-radius: 5px;
+		background-color: #e6e6e6;
+		outline: none;
+		margin: 20px 0;
 	
 }
 
 input[type="range"]::-webkit-slider-thumb {
 	-webkit-appearance: none;
-	appearance: none;
-	width: 20px;
-	height: 20px;
-	border-radius: 50%;
-	background-color: #333;fill: black;
-		stroke: none;
+		appearance: none;
+		width: 20px;
+		height: 20px;
+		border-radius: 50%;
+		background-color: #666;
+		cursor: pointer;
+}
+
+video {
+	position:fixed;
+	z-index:-1;
+	top:50%;
+	left:0;
+	/* background:blue; */
+	transform: translateY(-50%);
+
+	width: 100%;
+	height: 80vh;
+	padding: 0.5em;
+	display:none;
 }
 
 .vf_animation {
